# textquery

./: CMakeLists.txt  readme.md  story.txt
cpp_src/: AndQuery.cpp  CMakeLists.txt  NotQuery.cpp  OrQuery.cpp  Query.cpp  QueryResult.cpp  TextQuery.cpp
exec/: CMakeLists.txt  main.cpp
include/: AndQuery.h  BinaryQuery.h  NotQuery.h  OrQuery.h  Query.h  QueryResult.h  Query_base.h  TextQuery.h  WordQuery.h  all_std_include.h
